--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -1,17 +1,17 @@
 // Styling for the masthead
 header.masthead {
   text-align: center;
-  color: white;
+  color: $primary; //Make vision a reality text color
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
-  background-size: cover;
+  background-position: center top;
+  background-size: 50%;
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
     .intro-lead-in {
-      font-size: 22px;
+      font-size: 18px;
       font-style: italic;
       line-height: 22px;
       margin-bottom: 25px;
@@ -35,14 +35,14 @@ header.masthead {
         font-size: 40px;
         font-style: italic;
         line-height: 40px;
-        margin-bottom: 25px;
+        margin-bottom: 200px;
         @include serif-font;
       }
-      .intro-heading {
-        font-size: 75px;
+      .intro-heading { //"Make your vision a reality"
+        font-size: 30px;
         font-weight: 700;
         line-height: 75px;
-        margin-bottom: 50px;
+        margin-bottom: 10px; //distance between text and Tell Me More button
         @include heading-font;
       }
     }
