--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -5,7 +5,7 @@ header.masthead {
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center bottom;
   background-size: 50%;
   .intro-text {
     padding-top: 150px;
