--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -48,3 +48,23 @@ header.masthead {
     }
   }
 }
+@media (max-width: 767px) {
+  header.masthead {
+    background-position: center center;
+    background-size: cover;
+    .intro-text {
+      padding-top: 100px;
+      padding-bottom: 50px;
+      .intro-lead-in {
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 20px;
+      }
+      .intro-heading {
+        font-size: 35px;
+        line-height: 40px;
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
