modified @media(max-width: 767px) background position to center bottom

--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -50,7 +50,7 @@ header.masthead {
 }
 @media (max-width: 767px) {
   header.masthead {
-    background-position: center center;
+    background-position: center bottom;
     background-size: cover;
     .intro-text {
       padding-top: 100px;
