--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -51,19 +51,19 @@ header.masthead {
 @media (max-width: 767px) {
   header.masthead {
     background-position: center bottom;
-    background-size: cover;
+    background-size: 75%;
     .intro-text {
       padding-top: 100px;
       padding-bottom: 50px;
       .intro-lead-in {
         font-size: 16px;
         line-height: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
       .intro-heading {
-        font-size: 35px;
+        font-size: 20px;
         line-height: 40px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
       }
     }
   }
