Updated contact section

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,5 @@
 <!-- Team -->
-{% if site.locale and site.locale != "" and site.locale != nil %}
+<!-- {% if site.locale and site.locale != "" and site.locale != nil %}
 <section class="page-section" id="{{ site.data.sitetext[site.locale].team.section | default: "team" }}">
 <div class="container">
   <div class="row">
@@ -71,5 +71,5 @@
 	  </div>
 	</div>
 </section>
-{% endif %}
+{% endif %} -->
 <!-- End Team -->
