--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -51,7 +51,7 @@ header.masthead {
 @media (max-width: 767px) {
   header.masthead {
     background-position: center bottom;
-    background-size: 75%;
+    background-size: cover;
     .intro-text {
       padding-top: 100px;
       padding-bottom: 50px;
