--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -8,6 +8,10 @@
   font-size: 18px;
   padding: 10px 20px;
 }
+.btn-mobile-btn {
+  font-size: 18px;
+  padding: 5px 10px;
+}
 
 .btn-primary {
   background-color: $primary;
