--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -21,6 +21,7 @@ header.masthead {
       font-size: 50px;
       font-weight: 700;
       line-height: 50px;
+      margin-top: 400px;
       margin-bottom: 25px;
       @include heading-font;
     }
@@ -29,7 +30,7 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
+      padding-top: 275px;
       padding-bottom: 200px;
       .intro-lead-in {
         font-size: 40px;
@@ -42,6 +43,7 @@ header.masthead {
         font-size: 30px;
         font-weight: 700;
         line-height: 75px;
+        margin-top: 200px;
         margin-bottom: 10px; //distance between text and Tell Me More button
         @include heading-font;
       }
@@ -60,7 +62,7 @@ header.masthead {
         line-height: 20px;
         margin-bottom: 10px;
       }
-      .intro-heading {
+      .intro-heading { 
         font-size: 20px;
         line-height: 40px;
         margin-bottom: 5px;
