--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -15,9 +15,9 @@ a { //markdown button text and privacy policy
   }
 }
 
-.text-primary { //Services buttons
-  color: blue !important;
-}
+// .text-primary { //Services buttons
+//   color: blue !important;
+// }
 
 h1,
 h2,
@@ -70,3 +70,5 @@ img::selection {
 img::-moz-selection {
   background: transparent;
 }
+
+
