--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,10 +15,13 @@
       <div class="row text-center">
 	  {% for service in site.data.sitetext[site.locale].services.list %}
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
+          {% if service.image %}
+            <img src="{{ site.baseurl }}{{ service.image }}" alt="{{ service.title }}"width="300" height="auto">
+          {% endif %}
+          <!-- <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="{{ service.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
-          </span>
+          </span> -->
           <h4 class="service-heading">{{ service.title | markdownify }}</h4>
           {% if service.desc %}<div class="text-muted">{{ service.desc | markdownify }}</div>{% endif %}
         </div>
@@ -43,10 +46,13 @@
     <div class="row text-center">
   {% for service in site.data.sitetext.services.list %}
       <div class="col-md-4">
-        <span class="fa-stack fa-4x">
+        {% if service.image %}
+          <img src="{{ site.baseurl }}{{ service.image }}" alt="{{ service.title }}">
+        {% endif %}
+        <!-- <span class="fa-stack fa-4x">
           <i class="fas fa-circle fa-stack-2x text-primary"></i>
           <i class="{{ service.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
-        </span>
+        </span> -->
         <h4 class="service-heading">{{ service.title | markdownify }}</h4>
         {% if service.desc %}<div class="text-muted">{{ service.desc | markdownify }}</div>{% endif %}
       </div>
