--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -5,7 +5,7 @@ header.masthead {
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center bottom;
+  background-position: center top;
   background-size: 50%;
   .intro-text {
     padding-top: 150px;
@@ -52,7 +52,7 @@ header.masthead {
 }
 @media (max-width: 767px) {
   header.masthead {
-    background-position: center bottom;
+    background-position: center top;
     background-size: contain;
     .intro-text {
       padding-top: 100px;
