--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -14,6 +14,7 @@
         <a class="portfolio-link" data-toggle="modal" href="#p{{ forloop.index }}">
           <div class="portfolio-hover">
             <div class="portfolio-hover-content">
+              <!-- Creates a large plus (+) icon when hovering over image -->
               <i class="{{ site.data.style.portfolio-icon | default: "fas fa-plus fa-3x" }}"></i>
             </div>
           </div>
