--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -52,7 +52,7 @@ header.masthead {
 }
 @media (max-width: 767px) {
   header.masthead {
-    background-position: center top;
+    background-position: center bottom;
     background-size: contain;
     padding-top: 50px;
     padding-bottom: 50px;
