--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -6,9 +6,15 @@
     .portfolio-link {
       position: relative;
       display: block;
-      max-width: 400px;
+      max-width: 200px;
       margin: 0 auto;
       cursor: pointer;
+      .img-fluid {
+        width: auto;
+        max-width: none;
+        height: auto;
+        transform: scale(1.3);
+      }
       .portfolio-hover {
         position: absolute;
         width: 100%;
@@ -17,7 +23,7 @@
         -moz-transition: all ease 0.5s;
         transition: all ease 0.5s;
         opacity: 0;
-        background: fade-out($primary, 0.1);
+        background: fade-out(skyblue, 0.1);
         &:hover {
           opacity: 1;
         }
@@ -72,8 +78,10 @@
 
 .portfolio-modal {
   .modal-dialog {
-    margin: 1rem;
-    max-width: 100vw;
+    margin: 1rem auto;
+    // margin: 1rem;
+    max-width: 80%;
+    // max-width: 100vw;
   }
   .modal-content {
     padding: 100px 0;
@@ -136,5 +144,18 @@
         background-color: $gray-900;
       }
     }
+  }
+}
+
+//Custome media queries for Modal sizing
+@media (min-width: 768px) {
+  .portfolio-modal .modal-dialog {
+    max-width: 50%; //smaller size for larger (desktop) screens
+  }
+}
+
+@media (max-width: 767px) {
+  .portfolio-modal .modal-dialog {
+    max-width: 90%; //slightly larger size for smaller (mobile) screens
   }
 }
