added portfolio sections, updated message service, modified conact area colors

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -6,13 +6,13 @@ section#contact {
   background-position: center;
   background-size: cover;
   .section-heading {
-    color: darkblue;
+    color: rgb(251, 178, 32);
   }
   .form-group {
     margin-bottom: 25px;
     input,
     textarea {
-      padding: 15px;
+      padding: 10px;
     }
     input.form-control {
       height: auto;
