--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -9,12 +9,12 @@
       max-width: 200px;
       margin: 0 auto;
       cursor: pointer;
-      .img-fluid {
-        width: auto;
-        max-width: none;
-        height: auto;
-        transform: scale(1.3);
-      }
+      // .img-fluid {
+      //   width: auto;
+      //   max-width: none;
+      //   height: auto;
+      //   transform: scale(1.1);
+      // }
       .portfolio-hover {
         position: absolute;
         width: 100%;
