--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -37,12 +37,12 @@ h6 {
     margin-bottom: 15px;
   }
   h3.section-subheading {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 500;
     font-style: normal;
     margin-bottom: 75px;
     text-transform: none;
-    color: darkblue;
+    color: rgb(251, 178, 32);
     @include serif-font;
   }
 }
