--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -27,7 +27,7 @@ section#contact {
   }
   ::-webkit-input-placeholder {
     font-weight: 700;
-    color: $gray-400;
+    color: rgb(10, 10, 10);
     @include heading-font;
   }
   :-moz-placeholder {
